--- a/style/style.css
+++ b/style/style.css
@@ -1,64 +1,52 @@
-@font-face {
-    font-family: 'Lato';
-    src: url(../fonts/Lato-Bold.ttf) format("truetype");
-}
-
-@font-face {
-    font-family: 'Lato';
-    src: url(../fonts/Lato-Regular.ttf) format("truetype");
-}
-
 * {
-    font-family: 'Lato';
+    font-family: 'Roboto';
     font-style: normal;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
-body{
 
-    margin: 20px auto;
+body {
+    width: 1200px;
+    margin: auto;
+    background-color: #837FB1;
+
 }
-header{
-    display: flex;
-    background: linear-gradient( #ff403a5b 100%, #F75E05 100%);
+
+.container {
+    background-color: #212931;
+    width: 700px;
+    height: 360px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 21px;
+    margin: auto;
+    padding: 20px;
 }
-#logo {
-    background-image: url(../assets/logo.svg);
+
+.img {
+    background-image: url(../assets/Group\ 15.svg);
     background-repeat: no-repeat;
+    width: 57px;
+    height: 13px;
     background-size: contain;
-    width: 130px;
-    height: 22px;
-
-}
-.logo-login{
-    background-image: url(../assets/Vector.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 130px;
-    height: 22px;
-
 }
 
-ul {
-    display: flex;
-}
-
-ul li {
-    list-style: none;
-}
-
-ul li {
-    margin-left: 20px;
-}
-
-ul li:first-child {
-    margin-left: 0;
-}
-
-.btn-cons {
-    width: 225px;
-    padding: 20px 0 20px 0;
+h1 {
+    font-family: 400 48px 'Roboto';
     text-align: center;
-    border-radius: 4px;
+    color: #FFFFFF;
+}
 
+.container .quotes {
+    height: 340px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+p {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+    font: 400 20px `Roboto`;
 }
