--- a/style/style.css
+++ b/style/style.css
@@ -12,32 +12,33 @@ body {
 
 }
 
-.container {
+.wrapper {
     background-color: #212931;
     width: 700px;
     height: 360px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 21px;
     margin: auto;
-    padding: 20px;
+    padding: 15px 0 0 15px;
 }
 
 .img {
-    background-image: url(../assets/Group\ 15.svg);
-    background-repeat: no-repeat;
     width: 57px;
     height: 13px;
+    background-image: url(../assets/Group\ 15.svg);
+    background-repeat: no-repeat;
     background-size: contain;
 }
 
 h1 {
-    font-family: 400 48px 'Roboto';
+    font-family: 400px 48px 'Roboto';
     text-align: center;
     color: #FFFFFF;
 }
 
-.container .quotes {
-    height: 340px;
+
+.center {
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,5 +49,5 @@ p {
     justify-content: center;
     align-items: center;
     color: #FFF;
-    font: 400 20px `Roboto`;
+    font: 400 20px "Roboto";
 }
